[package]
name = "korasi-cli"
version = "0.1.1"
authors = ["Vui Chee <vc9000.work@gmail.com>"]
license = "MIT"
description = "An AWS client to remotely run code that compiles on certain type of hardware."
keywords = ["aws", "ssh", "sftp", "cli"]
repository = "https://github.com/vui-chee/korasi"
categories = ["command-line-utilities", "development-tools::cargo-plugins", "network-programming"]
readme = "README.md"
edition = "2021"

[[bin]]
name = "korasi"
path = "src/main.rs"

[[bin]]
name = "cargo-korasi"
path = "src/bin/cargo-korasi.rs"

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.77.0"
aws-sdk-ssm = "1.50.0"
aws-smithy-runtime-api = "1.7.2"
aws-types = "1.3.3"
base64 = "0.22.1"
clap = { version = "4.5.19", features = ["derive"] }
ignore = "0.4.23"
inquire = "0.7.5"
petname = "2.0.2"
reqwest = "0.12.8"
russh = "0.45.0"
russh-sftp = "2.0.5"
shell-escape = "0.1.5"
termion = "4.0.3"
tokio = { version = "1", features = ["rt", "io-std"] }
tokio-fd = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.release]
strip = true
lto = true
panic = "abort"
