[package]
name = "korasi-cli"
version = "0.1.2"
authors = ["Vui Chee <vc9000.work@gmail.com>"]
license = "MIT"
description = "An AWS client to remotely run code that compiles on certain type of hardware."
keywords = ["aws", "ssh", "sftp", "cli"]
repository = "https://github.com/vui-chee/korasi"
categories = ["command-line-utilities", "development-tools::cargo-plugins", "network-programming"]
readme = "README.md"
edition = "2024"

[[bin]]
name = "korasi"
path = "src/main.rs"

[[bin]]
name = "cargo-korasi"
path = "src/bin/cargo-korasi.rs"

[dependencies]
anyhow = "1.0.89"
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.154.0"
aws-sdk-ssm = "1.87.0"
aws-types = "1.3.3"
base64 = "0.22.1"
clap = { version = "4.5.21", features = ["derive"] }
ignore = "0.4.23"
inquire = "0.7.5"
petname = "2.0.2"
reqwest = { version = "0.12.9", default-features = false, features = ["default-tls", "charset"] }
russh = "0.53.0"
russh-sftp = "2.1.1"
shell-escape = "0.1.5"
termion = "4.0.3"
tokio = { version = "1", features = ["rt", "io-std"] }
tokio-fd = "0.3.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.release]
strip = true
lto = true
panic = "abort"
